512-hcr/manifests/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcr-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hcr-proxy
  template:
    metadata:
      labels:
        app: hcr-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.0
          volumeMounts:
            - name: hcr-proxy-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: hcr-proxy-conf
          configMap:
            name: hcr-proxy-conf
---
apiVersion: v1
kind: Service
metadata:
  name: hcr-proxy
spec:
  selector:
    app: hcr-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcr-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hcr.tuana9a.com
      secretName: proxy-tls
  rules:
    - host: hcr.tuana9a.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hcr-proxy
                port:
                  number: 80
