512-hcr/manifests/redirect.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect
  template:
    metadata:
      labels:
        app: redirect
    spec:
      containers:
        - name: redirect
          image: caprover/nginx-redirect
---
apiVersion: v1
kind: Service
metadata:
  name: redirect
spec:
  selector:
    app: redirect
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hcr.tuana9a.com
      secretName: redirect-tls # The secret to store the SSL certificate
  rules:
    - host: hcr.tuana9a.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect
                port:
                  number: 80
